<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".8"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/etUser"
                    style="@style/inputs"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:text="@string/user" >
                </EditText>

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/inputs"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/etServer"
                    style="@style/inputs"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:text="@string/server" >
                </EditText>
            </LinearLayout>

            <ImageButton 
                android:id="@+id/bSearch"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="0.2"
                android:src="@drawable/abs__ic_search"/>
            
        </LinearLayout>
    </LinearLayout>

    <include
        layout="@layout/progress_layout"
        android:visibility="invisible" />

</FrameLayout>